[tool.poetry]
name = "coding-coach"
version = "0.1.0"
description = ""
authors = ["MariusSuessmilch <47320006+MariusSuessmilch@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "coding_coach"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.34.0"
langchain = "^0.2.0"
streamlit-code-editor = "^0.1.14"
langchain-openai = "^0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
